# customer_data_mcp

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: build.yml
prd/: customer-data-mcp.md
scripts/: load_csv.py
src/: db.py  server.py
