[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer-data-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
customer-data-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
